@@ -7,5 +7,3 @@ o libtoolize ?
 o revisit real-time scheduling and one-thread-per-connection
 o look into performance
 o create proper error-reporting module
-o configure options to enable / disable lame / ogg support and to
-  specify their location
