@@ -4,6 +4,8 @@ DarkIce 0.7
       thanks to Robin P. Blanchard, <Robin_Blanchard@gactr.uga.edu>
     o added support for resampling mp3 streams
     o DarkIce config file now may contain spaces and tabs as white space
+    o configure script enables build with or without lame / Ogg Vorbis
+      also possibility to specify alternate locations for these
 
 18-09-2001: DarkIce 0.6 released
 
